added dynamic controoler stuf

--- a/TestEf/App.config
+++ b/TestEf/App.config
@@ -13,6 +13,9 @@
       <context type="TestEf.Context, TestEf">
         <databaseInitializer type="TestEf.DbInit, TestEf" />
       </context>
+      <context type="TestEf.Context2, TestEf">
+        <databaseInitializer type="TestEf.DbInit2, TestEf" />
+      </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
