--- a/efplay/efplay.csproj
+++ b/efplay/efplay.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Lecture.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentPlus.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
