added some db migration

--- a/efplay/efplay.csproj
+++ b/efplay/efplay.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Lecture.cs" />
+    <Compile Include="Pluz.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentPlus.cs" />
