--- a/TestEf/TestEf.csproj
+++ b/TestEf/TestEf.csproj
@@ -51,16 +51,11 @@
   <ItemGroup>
     <Compile Include="Context.cs" />
     <Compile Include="Context2.cs" />
-    <Compile Include="DbInit2.cs" />
-    <Compile Include="DbInit.cs" />
-    <Compile Include="Migrations\201706192039569_update1.cs" />
-    <Compile Include="Migrations\201706192039569_update1.Designer.cs">
-      <DependentUpon>201706192039569_update1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration2.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -71,11 +66,6 @@
       <Project>{19C778EE-8BEA-47BF-9CB8-D33DA8593B9D}</Project>
       <Name>efplay</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706192039569_update1.resx">
-      <DependentUpon>201706192039569_update1.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
